// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic array 1`] = `
"
empty

      ↓ ↓ ↓ ↓ ↓ ↓

/***** Do not edit this file *****/
import { Epic as Container1 } from \\"../examples/container1/actionTypes\\";
import { Epic as Container2 } from \\"../examples/container2/actionTypes\\";

export const Epics = [Container1, Container2];
"
`;

exports[`basic object 1`] = `
"
empty

      ↓ ↓ ↓ ↓ ↓ ↓

/***** Do not edit this file *****/
import { Container1 } from \\"../examples/container1/actionTypes\\";
import { Container2 } from \\"../examples/container2/actionTypes\\";

export const reducers = {
  Container1,
  Container2
};
"
`;

exports[`basic union 1`] = `
"
empty

      ↓ ↓ ↓ ↓ ↓ ↓

/***** Do not edit this file *****/
import { Action as Container1 } from \\"../examples/container1/actionTypes\\";
import { Action as Container2 } from \\"../examples/container2/actionTypes\\";

export type Action = Container1 | Container2;
"
`;

exports[`equal path 1`] = `
"
empty

      ↓ ↓ ↓ ↓ ↓ ↓

/***** Do not edit this file *****/
import { reducer as . } from \\"./actionTypes\\";

export const reducers = {
  .
};
"
`;

exports[`prefix / suffix 1`] = `
"
empty

      ↓ ↓ ↓ ↓ ↓ ↓

/***** Do not edit this file *****/
import { Action as pre_Container1_suf } from \\"../examples/container1/actionTypes\\";
import { Action as pre_Container2_suf } from \\"../examples/container2/actionTypes\\";

export type Action = pre_Container1_suf | pre_Container2_suf;
"
`;
